@@ -5,21 +5,30 @@ Jug Shell
 The ``jug shell`` subcommand opens up a shell within the environment of the
 Jugfile. It can be used for debugging and exploration of the task structure.
 
-To obtain a ``list`` of all tasks seen by jug you can run ``tasks = get_tasks()``
+To obtain a ``list`` of all tasks seen by jug you can run ``tasks =
+get_tasks()``. As a convenience function, you can also use
+``get_filtered_tasks()`` to obtain filtered versions:
 
-.. versionadded:: 1.6.5
-    ``get_tasks()`` was only added to the shell in version 1.6.5. Before that you
-    can access tasks directly by importing ``from jug.task import alltasks as tasks``.
+    all_tasks = get_tasks()
+
+    loadable = get_filtered_tasks(loadable=True)
+    failed = get_filtered_tasks(failed=True)
+
+
+This returns only tasks that fulfil the filtering criteria used
+
+
+.. versionadded:: 2.3
+   ``get_filtered_tasks`` was added in version 2.3. In previous versions, you
+   had to filter the output of ``get_tasks()`` yourself
+
 
 Inside the environment, you can use the ``value(task)`` function to load
 results (if available; otherwise, an exception is thrown).
 
-.. versionadded:: 1.5
-    ``invalidate(task)`` was only added to the shell in version 1.5. Before
-    that, only ``task.invalidate()`` (non-recursive) was available.
-
 The ``invalidate(task)`` function invalidates the results of its argument and
 all dependents, **recursively**, much like the ``jug invalidate`` subcommand.
+
 
 You can call methods on ``Task`` objects directly as well:
 
